# rust-cmdline-book

./: Cargo.toml
src/: lib.rs
tests/: cat.rs  cli.rs  comm.rs  common.rs  cut.rs  echo.rs  find.rs  grep.rs  head.rs  tail.rs  uniq.rs  wc.rs
tests/inputs/: cat_input.txt  cat_no_blanks.txt  cat_numbers.txt  comm_1.txt  comm_case_insensitive_expected.txt  comm_col1_expected.txt  comm_default_expected.txt  comm_delimiter_expected.txt  cut_bytes.txt  cut_bytes_expected.txt  cut_chars_expected.txt  cut_csv.txt  cut_csv_expected.txt  cut_logs_expected.txt  grep_insensitive_expected.txt  grep_inverse_expected.txt  grep_recursive_expected.txt  grep_simple_expected.txt  head_bytes_arg.txt  head_default.txt  head_input.txt  head_lines_arg.txt  head_multiple.txt  tail_bytes_expected.txt  tail_multiple_expected.txt  uniq_count.txt  uniq_input.txt  uniq_no_args.txt  uniq_unique.txt  wc_input.txt  wc_lines_arg.txt  wc_multiple.txt  wc_no_args.txt
tests/inputs/grep/: a.txt  b.txt
