[package]
name = "runix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.3"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3.0.3"
rand = "0.8.5"
